grammar
input =
    list '\n'
    | list EOF
    | '\n'
    | EOF
    ;

list = and_or { ';' and_or } [ ';' ] ;

and_or = pipeline ;

pipeline = command ;

command =
    simple_command
    | shell_command
    ;

simple_command = WORD { element } ;

element = WORD ;

rule_if = 'if' compound_list 'then' compound_list [else_clause] 'fi' ;

shell_command = rule_if ;

else_clause =
    'else' compound_list
    | 'elif' compound_list 'then' compound_list [else_clause]
    ;

compound_list = {'\n'} and_or { ';' | '\n' {'\n'} and_or } [';'] {'\n'} ;
